twitch API complete

--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
 
 
 		<script src="assets/javascript/home.js"></script>
+		<script src="assets/javascript/twitch-api.js"></script>
 
 
 	</body>
