ready for implementation

--- a/about-us.html
+++ b/about-us.html
@@ -62,7 +62,7 @@
 							<div class="card-content white-text">
 								<span class="card-title"><h4>Meet the Team</h4></span>
 								<div id="about-us-info">
-									
+
 									<h5 style="color: red;">Brian Evans:</h5>
 									<p></p>
 									<br>
@@ -73,7 +73,7 @@
 									<p></p>
 									<br>
 									<h5 style="color: red;">Klayton Liekkio:</h5>
-									<p>Full Stack Web Developer. Reponsible for Twitch API.</p>
+									<p>Full Stack Web Developer. Reponsible for Twitch API implementation.</p>
 
 								</div>
 							
