ready for merging

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 					<div class="col s12 m6">
 						<div class="card black" id="rightCard">
 							<div class="card-content white-text">
-								<span class="card-title">Learn from the Pros</span>
-								<div class="row">
+								<span class="card-title"><h5>Learn from the Pros</h5></span>
+								<div class="row" id="twitch-row">
 									<form class="col s12">
 										<div class="row-results">
 	<!-- twitch results will go here -->
@@ -154,7 +154,7 @@
 							<li>
 								<div class="chip footerChip">
 									<img src="assets/images/about-us.JPG" alt="Contact Person">
-									<a class="black-text" href="about-us.html">About Us</a>
+									<a class="black-text" href="#!">About Us</a>
 								</div>
 							</li>
 						</ul>
