Fixed some formatting

--- a/index.html
+++ b/index.html
@@ -88,17 +88,16 @@
 
 					<!-- new div for twitch API content -->
 				<div class="container-twitch">
-					<div class="col s12 m6">
-						<div class="card black" id="rightCard">
-							<div class="card-content white-text">
-								<span class="card-title"><h5>Learn from the Pros</h5></span>
-								<div class="row" id="twitch-row">
-									<form class="col s12">
+					<div class="row">
+						<div class="col s12 m6">
+							<div class="card black" id="rightCard">
+								<div class="card-content white-text">
+									<span class="card-title">Learn from the Pros</span>
+									<div class="row" id="twitch-row">
 										<div class="row-results">
-	<!-- twitch results will go here -->
-									
+										<!-- twitch results will go here -->
 										</div>
-									</form>
+									</div>
 								</div>
 							</div>
 						</div>
