--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 							<span id="welcomeMessage"></span>
 							<br>Edit your games list below.<br>
 							<input id="gameName" type="text">
-							<button id="addGame">Add</button>
-							<button id="removeGame">Remove</button><br>
-							<span id="gameMessage">Game message</span>
+							<a class="waves-effect waves-red btn red" id="addGame">Add</a>
+							<a class="waves-effect waves-red btn red" id="removeGame">Remove</a><br>
+							<span id="gameMessage"></span>
 						</div>
 						<div class="card-panel" id="buttonList">
 						</div>
@@ -122,7 +122,7 @@
 										</div>
 										<div class="row">
 											<div class="input-field col s12">
-												<a id="submitBtn" class="btn waves-effect waves-light red col">Submit</a>
+												<a id="submitBtn" class="btn waves-effect waves-red red col">Submit</a>
 											</div>
 										</div>
 									</form>
@@ -146,7 +146,7 @@
 						<ul>
 							<li>
 								<a class="modal-trigger" href="#supportModal">
-									<div class="chip footerChip">
+									<div class="chip footerChip waves-effect waves-red #dddddd">
 										<img src="assets/images/support-float-icon.jpg" alt="Support">
 										Support
 									</div>
@@ -154,7 +154,7 @@
 							</li>
 							<li>
 								<a class="modal-trigger" href="#suggestionsModal">
-									<div class="chip footerChip">
+									<div class="chip footerChip waves-effect waves-red #dddddd">
 										<img src="assets/images/idea.jpg" alt="Suggestions">
 										Suggestions
 									</div>
@@ -162,7 +162,7 @@
 							</li>
 							<li>
 								<a class="modal-trigger" href="#aboutUsModal">
-									<div class="chip footerChip">
+									<div class="chip footerChip waves-effect waves-red #dddddd">
 										<img src="assets/images/about-us.JPG" alt="About Us">
 										About Us
 									</div>
@@ -190,8 +190,17 @@
 						<div id="suggestionsModal" class="modal black-text">
 							<div class="modal-content">
 								<h4>Help Improve <span class="red-text">Game</span>Start!</h4>
-								<p>If you have an idea for a new feature let us know!  Click on the link below to send us email!</p>
-								<a href="mailto:not@your.concern.com">Suggestions</a>
+								<p>If you have an idea for a new feature let us know!  Fill out the form below to send us email!</p>
+								<form action="mailto:dhwyll@gmail.com" method="post" enctype="text/plain">
+									<div class="row">
+										<div class="input-field col s12">
+											<i class="material-icons prefix">insert_comment</i>
+											<textarea name="emailComment" rows="50"></textarea>
+											<label for="emailComment">&nbsp;&nbsp;Comments</label>
+										</div>
+										<input class="btn waves-effect waves-red red col formBtn" type="submit" value="Send">
+										<input class="btn waves-effect waves-red red col formBtn" type="reset" value="Reset">
+								</form>
 							</div>
 							<div class="modal-footer">
 								<a href="#!" class="modal-action modal-close waves-effect waves-red btn-flat">Cool</a>
