Fixed email including label in Suggestions form

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 									<div class="row">
 										<div class="input-field col s12">
 											<i class="material-icons prefix">insert_comment</i>
-											<textarea name="emailComment" rows="50"></textarea>
+											<textarea id="emailComment" rows="50"></textarea>
 											<label for="emailComment">&nbsp;&nbsp;Comments</label>
 										</div>
 										<input class="btn waves-effect waves-red red col formBtn" type="submit" value="Send">
