Fixed bad modal for About Us

--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
 										</div>
 										<input class="btn waves-effect waves-red red col formBtn" type="submit" value="Send">
 										<input class="btn waves-effect waves-red red col formBtn" type="reset" value="Reset">
+									</div>
 								</form>
 							</div>
 							<div class="modal-footer">
