finished account validation

--- a/index.html
+++ b/index.html
@@ -132,9 +132,12 @@
 	                                            </div>
 	                                            <div class="input-field col s8">
 	                                                <i class="material-icons prefix">contacts</i>
-	                                                <input id="signUpPass" type="text" class="validate">
+	                                                <input id="signUpPass" type="password" class="validate">
 	                                                <label for="signUpPass">Your Password</label>
 	                                            </div>
+	                                        </div>
+	                                        <div class="row">
+	                                            <span class="errorMsg"></span>
 	                                        </div>
 	                                        <div class="row">
 	                                            <div class="input-field col s12">
@@ -154,14 +157,17 @@
 	                                        <div class="row">
 	                                            <div class="input-field col s8">
 	                                                <i class="material-icons prefix">contacts</i>
-	                                                <input id="email" type="text" class="validate">
-	                                                <label for="email">Your Email</label>
+	                                                <input id="signInEmail" type="text" class="validate">
+	                                                <label for="signInEmail">Your Email</label>
 	                                            </div>
 	                                            <div class="input-field col s8">
 	                                                <i class="material-icons prefix">contacts</i>
-	                                                <input id="pass" type="text" class="validate">
-	                                                <label for="pass">Your Password</label>
+	                                                <input id="signInPass" type="password" class="validate">
+	                                                <label for="signInPass">Your Password</label>
 	                                            </div>
+	                                        </div>
+	                                        <div class="row">
+	                                            <span class="errorMsg"></span>
 	                                        </div>
 	                                        <div class="row">
 	                                            <div class="input-field col s12">
