Fixed About Us icon, added pointer cursor to sign in/up link

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 							<li>
 								<a class="modal-trigger" href="#aboutUsModal">
 									<div class="chip footerChip waves-effect waves-red #dddddd">
-										<img src="assets/images/about-us.JPG" alt="About Us">
+										<img src="assets/images/about-us.jpg" alt="About Us">
 										About Us
 									</div>
 								</a>
