Fixed icons in signin/up

--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
 	                                                <label for="name">Username</label>
 	                                            </div>
 	                                            <div class="input-field col s8">
-	                                                <i class="material-icons prefix">contacts</i>
+	                                                <i class="material-icons prefix">email</i>
 	                                                <input id="signUpEmail" type="text" class="validate">
 	                                                <label for="signUpEmail">Your Email</label>
 	                                            </div>
 	                                            <div class="input-field col s8">
-	                                                <i class="material-icons prefix">contacts</i>
+	                                                <i class="material-icons prefix">lock_outline</i>
 	                                                <input id="signUpPass" type="password" class="validate">
 	                                                <label for="signUpPass">Your Password</label>
 	                                            </div>
@@ -131,12 +131,12 @@
 	                                    <form class="col s12">
 	                                        <div class="row">
 	                                            <div class="input-field col s8">
-	                                                <i class="material-icons prefix">contacts</i>
+	                                                <i class="material-icons prefix">email</i>
 	                                                <input id="signInEmail" type="text" class="validate">
 	                                                <label for="signInEmail">Your Email</label>
 	                                            </div>
 	                                            <div class="input-field col s8">
-	                                                <i class="material-icons prefix">contacts</i>
+	                                                <i class="material-icons prefix">lock_outline</i>
 	                                                <input id="signInPass" type="password" class="validate">
 	                                                <label for="signInPass">Your Password</label>
 	                                            </div>
