Fixed Enter button issue in chat

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
 				  </div>
 				  <div class="row">
 					<div class="input-field col s12">
-					  <button id="post" class="btn waves-effect waves-red red white-text col" type="submit">
+					  <button id="post" class="btn waves-effect waves-red red white-text col">
 						Post
 						<i class="material-icons right">send</i>
 					  </button>
