--- a/index.html
+++ b/index.html
@@ -123,6 +123,11 @@
 												</div>
 											</div>
 											<div class="row">
+												<div class="input-field col s12">
+													<input id="rememberMe" type="checkbox">Remember me?
+												</div>
+											</div>
+											<div class="row">
 												<a id="switchToSignIn">Already signed up? Click here to sign in.</a>
 											</div>
 										</form>
