--- a/index.html
+++ b/index.html
@@ -113,6 +113,11 @@
 													<input id="signUpPass" type="password" class="validate">
 													<label for="signUpPass">Your Password</label>
 												</div>
+												<div class="input-field col s8">
+													<i class="material-icons prefix">lock_outline</i>
+													<input id="checkPass" type="password" class="validate">
+													<label for="checkPass">Confirm Password</label>
+												</div>
 											</div>
 											<div class="row">
 												<span class="errorMsg"></span>
@@ -120,11 +125,6 @@
 											<div class="row">
 												<div class="input-field col s12">
 													<a id="signUpBtn" class="btn waves-effect waves-red red col">Submit</a>
-												</div>
-											</div>
-											<div class="row">
-												<div class="input-field col s12">
-													<input id="rememberMe" type="checkbox">Remember me?
 												</div>
 											</div>
 											<div class="row">
